2005-05-16  Not Zed  <NotZed@Ximian.com>

	* move e-error into e-util/

2005-05-16  Srinivasa Ragavan <sragavan@novell.com>

	* GNOME_Evolution_Mail.server.in.in: Added tooltips
		
2005-05-13  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Add new em-folder-utils.[ch] abstraction

	* em-folder-browser.c: Update for new menu layout
	Add new methods to handle the actions that were previously only
	available from the context menu when right-clicking on a folder

	* em-folder-selector.c (emfs_response): Just call emfu_folder_create
	if the user wants to create a new folder in the selector dialog
	(em_folder_selector_get_selected_path): Clean up the code to fix a
	couple potential crashes

	* em-folder-tree.[ch]: Add methods to get pointers to a CamelFolder or
	CamelFolderInfo object for the selected item in the tree
	Add a method to get a pointer to an EMFolderTreeModelStoreInfo object
	for the selected store in the tree
	Move folder operations out into em-folder-utils.[ch] so that they
	are abstracted from the tree and can be used by methods other than
	the internal context menu

	* em-folder-utils.[ch]: Move the folder operations code to here

	* em-folder-view.c: Update for the new menu layout
	Fix Mark as Read/Unread in the context menu to only show up in the list

	* mail-component.c (create_item): Just call emfu_folder_create here
	when the user requests to create a new folder from the New toolbar item

2005-05-13  Shreyas Srinivasan	<sshreyas@novell.com>
	
	* Fixes bug #273868, #300113, #302831.
	
	* mail-offline-handler.c : Add check for Camel Offline
	store to is_service_relevant.

2005-04-21  Jeffrey Stedfast  <fejj@novell.com>

	* em-composer-utils.c (post_reply_to_message): Use the real folder
	and real uid (not the virtual if replying to a message in a
	vfolder). Fixes bug #269129.

2005-05-06  Vivek Jain <jvivek@novell.com>

	* em-folder-view.c: EPopupItem emfv_popup_items[] replace Print
	  with Print... Fixes #272242
