@@ -1,5 +1,7 @@
 SUBDIRS = default importers
 
+mailincludedir = $(privincludedir)/mail
+
 INCLUDES =						\
 	-I$(top_srcdir)/widgets				\
 	-I$(top_srcdir)/widgets/e-text			\
@@ -49,12 +51,48 @@ $(SPELL_IDL_GENERATED_C): $(SPELL_IDL_GENERATED_H)
 
 Spell-impl.o: Spell.h
 
+# plugin mail api
+mailinclude_HEADERS =				\
+	em-composer-utils.h			\
+	em-config.h				\
+	em-event.h				\
+	em-folder-browser.h			\
+	em-folder-tree-model.h			\
+	em-folder-tree.h			\
+	em-folder-utils.h			\
+	em-folder-view.h			\
+	em-format-hook.h			\
+	em-format-html-display.h		\
+	em-format-html-print.h			\
+	em-format-html.h			\
+	em-format-quote.h			\
+	em-format.h				\
+	em-html-stream.h			\
+	em-icon-stream.h			\
+	em-inline-filter.h			\
+	em-menu.h				\
+	em-message-browser.h			\
+	em-popup.h				\
+	em-stripsig-filter.h			\
+	em-sync-stream.h			\
+	em-utils.h				\
+	em-vfs-stream.h				\
+	mail-autofilter.h			\
+	mail-component.h			\
+	mail-config.h				\
+	mail-mt.h				\
+	mail-ops.h				\
+	mail-session.h				\
+	mail-tools.h				\
+	message-list.h				\
+	mail-vfolder.h
 
 # libevolution-mail
 
 libevolution_mail_la_SOURCES =			\
 	$(SPELL_IDL_GENERATED)			\
 	$(MARSHAL_GENERATED)			\
+	$(mailinclude_HEADERS)			\
 	e-searching-tokenizer.c			\
 	e-searching-tokenizer.h			\
 	em-account-editor.c			\
@@ -64,11 +102,8 @@ libevolution_mail_la_SOURCES =			\
 	em-composer-prefs.c			\
 	em-composer-prefs.h			\
 	em-composer-utils.c			\
-	em-composer-utils.h			\
 	em-config.c				\
-	em-config.h				\
 	em-event.c				\
-	em-event.h				\
 	em-filter-context.c			\
 	em-filter-context.h			\
 	em-filter-editor.c			\
@@ -80,7 +115,6 @@ libevolution_mail_la_SOURCES =			\
 	em-filter-source-element.c		\
 	em-filter-source-element.h		\
 	em-folder-browser.c			\
-	em-folder-browser.h			\
 	em-folder-properties.c			\
 	em-folder-properties.h			\
 	em-folder-selection-button.c		\
@@ -90,31 +124,18 @@ libevolution_mail_la_SOURCES =			\
 	em-folder-selector.c			\
 	em-folder-selector.h			\
 	em-folder-tree-model.c			\
-	em-folder-tree-model.h			\
 	em-folder-tree.c			\
-	em-folder-tree.h			\
 	em-folder-utils.c			\
-	em-folder-utils.h			\
 	em-folder-view.c			\
-	em-folder-view.h			\
 	em-format-hook.c			\
-	em-format-hook.h			\
 	em-format-html-display.c		\
-	em-format-html-display.h		\
 	em-format-html-print.c			\
-	em-format-html-print.h			\
 	em-format-html.c			\
-	em-format-html.h			\
 	em-format-quote.c			\
-	em-format-quote.h			\
 	em-format.c				\
-	em-format.h				\
 	em-html-stream.c			\
-	em-html-stream.h			\
 	em-icon-stream.c			\
-	em-icon-stream.h			\
 	em-inline-filter.c			\
-	em-inline-filter.h			\
 	em-junk-filter.c			\
 	em-junk-filter.h			\
 	em-junk-plugin.c			\
@@ -122,23 +143,17 @@ libevolution_mail_la_SOURCES =			\
 	em-mailer-prefs.c			\
 	em-mailer-prefs.h			\
 	em-menu.c				\
-	em-menu.h				\
 	em-message-browser.c			\
-	em-message-browser.h			\
 	em-migrate.c				\
 	em-migrate.h				\
 	em-popup.c				\
-	em-popup.h				\
 	em-search-context.c			\
 	em-search-context.h			\
 	em-stripsig-filter.c			\
-	em-stripsig-filter.h			\
 	em-subscribe-editor.c			\
 	em-subscribe-editor.h			\
 	em-sync-stream.c			\
-	em-sync-stream.h			\
 	em-utils.c				\
-	em-utils.h				\
 	em-vfolder-context.c			\
 	em-vfolder-context.h			\
 	em-vfolder-editor.c			\
@@ -146,39 +161,29 @@ libevolution_mail_la_SOURCES =			\
 	em-vfolder-rule.c			\
 	em-vfolder-rule.h			\
 	em-vfs-stream.c				\
-	em-vfs-stream.h				\
 	mail-autofilter.c			\
-	mail-autofilter.h			\
 	mail-component-factory.c		\
 	mail-component.c			\
-	mail-component.h			\
 	mail-config-factory.c			\
 	mail-config-factory.h			\
 	mail-config.c				\
-	mail-config.h				\
 	mail-crypto.c				\
 	mail-crypto.h				\
 	mail-folder-cache.c			\
 	mail-folder-cache.h			\
 	mail-mt.c				\
-	mail-mt.h				\
 	mail-offline-handler.c			\
 	mail-offline-handler.h			\
 	mail-ops.c				\
-	mail-ops.h				\
 	mail-send-recv.c			\
 	mail-send-recv.h			\
 	mail-session.c				\
-	mail-session.h				\
 	mail-signature-editor.c			\
 	mail-signature-editor.h			\
 	mail-tools.c				\
-	mail-tools.h				\
 	mail-types.h				\
 	mail-vfolder.c				\
-	mail-vfolder.h				\
 	message-list.c				\
-	message-list.h				\
 	message-tag-editor.c			\
 	message-tag-editor.h			\
 	message-tag-followup.c			\
