@@ -25,10 +25,12 @@
 #ifndef _MAIL_AUTOFILTER_H
 #define _MAIL_AUTOFILTER_H
 
-#include <filter/filter-rule.h>
-#include "em-filter-context.h"
-#include "em-vfolder-context.h"
-#include <camel/camel-mime-message.h>
+struct _FilterRule;
+struct _EMVFolderContext;
+struct _EMFilterContext;
+struct _CamelMimeMessage;
+struct _CamelInternetAddress;
+struct _CamelStore;
 
 enum {
 	AUTO_SUBJECT = 1,
@@ -37,15 +39,15 @@ enum {
 	AUTO_MLIST = 8,
 };
 
-FilterRule *em_vfolder_rule_from_message(EMVFolderContext *context, CamelMimeMessage *msg, int flags, const char *source);
-FilterRule *filter_rule_from_message(EMFilterContext *context, CamelMimeMessage *msg, int flags);
-FilterRule *em_vfolder_rule_from_address(EMVFolderContext *context, CamelInternetAddress *addr, int flags, const char *source);
+struct _FilterRule *em_vfolder_rule_from_message(struct _EMVFolderContext *context, struct _CamelMimeMessage *msg, int flags, const char *source);
+struct _FilterRule *filter_rule_from_message(struct _EMFilterContext *context, struct _CamelMimeMessage *msg, int flags);
+struct _FilterRule *em_vfolder_rule_from_address(struct _EMVFolderContext *context, struct _CamelInternetAddress *addr, int flags, const char *source);
 
 /* easiest place to put this */
-void  filter_gui_add_from_message(CamelMimeMessage *msg, const char *source, int flags);
+void  filter_gui_add_from_message(struct _CamelMimeMessage *msg, const char *source, int flags);
 
 /* Also easiest place for these, we should really share a global rule context for this stuff ... */
-void mail_filter_rename_uri(CamelStore *store, const char *olduri, const char *newuri);
-void mail_filter_delete_uri(CamelStore *store, const char *uri);
+void mail_filter_rename_uri(struct _CamelStore *store, const char *olduri, const char *newuri);
+void mail_filter_delete_uri(struct _CamelStore *store, const char *uri);
 
 #endif
